--- a/bio.html
+++ b/bio.html
@@ -16,6 +16,8 @@
         <a href="bio.html">About</a>
         <a href="publications.html">Publications</a>
         <a href="cv.html">Resume</a>
+        <a href="projects.html">Projects</a>
+
       </nav>
       <div class="contact">
         <p><strong>Email:</strong><br><a href="mailto:uditdeo1670@gmail.com">uditdeo1670@gmail.com</a></p>
