--- a/bio.html
+++ b/bio.html
@@ -5,11 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About | Udit Deo</title>
   <link rel="stylesheet" href="assets/css/style.css" />
+  <script>
+    // Auto-detect dark mode preference
+    window.onload = function () {
+      if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+        document.body.classList.add('dark-mode');
+      }
+    };
+  </script>
 </head>
 <body>
   <div class="container">
+    <!-- Sidebar -->
     <aside class="sidebar">
-      <img src="assets/images/profile.jpg" class="profile-img" alt="Udit Deo">
+      <img src="assets/images/profile.jpg" class="profile-img" alt="Udit Deo" />
       <h1>Udit Deo</h1>
       <nav>
         <a href="index.html">Home</a>
@@ -17,8 +26,10 @@
         <a href="publications.html">Publications</a>
         <a href="cv.html">Resume</a>
         <a href="projects.html">Projects</a>
-
       </nav>
+      <div class="toggle-wrapper">
+        <button onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
+      </div>
       <div class="contact">
         <p><strong>Email:</strong><br><a href="mailto:uditdeo1670@gmail.com">uditdeo1670@gmail.com</a></p>
         <p><strong>GitHub:</strong><br><a href="https://github.com/deoudit">deoudit</a></p>
@@ -26,6 +37,7 @@
       </div>
     </aside>
 
+    <!-- Main Content -->
     <main class="main">
       <h2>About Me</h2>
       <p>I am a postgraduate researcher at MANIT Bhopal (INI) working at the intersection of fuzzy optimization, AI, and decision systems. My research focuses on building interpretable, intelligent systems that work in real-world environments.</p>
@@ -46,13 +58,15 @@
 
       <h3>Exams Qualified</h3>
       <ul>
-        <li>UGC-NET (CS) – JRF + Assistant Professor (Dec 2024)</li>
+        <li>UGC-NET (CS) – JRF (99.95%ile, Dec 2024) and Assistant Professor (June 2024)</li>
         <li>GATE (CS, 2022 & 2025) | GATE (DA, 2025)</li>
       </ul>
 
       <h3>Current Thesis</h3>
-      <p><strong>Title:</strong> Bridging Fuzziness and Optimization: Frameworks for Relation Inequalities and Multi-Criteria Decision Systems<br>
-      <strong>Advisors:</strong> Prof. MMS Beg (ZHCET, AMU) and Dr. JK Jain (MANIT Bhopal)</p>
+      <p>
+        <strong>Title:</strong> Bridging Fuzziness and Optimization: Frameworks for Relation Inequalities and Multi-Criteria Decision Systems<br>
+        <strong>Advisors:</strong> Prof. MMS Beg (ZHCET, AMU) and Dr. JK Jain (MANIT Bhopal)
+      </p>
     </main>
   </div>
 </body>
