--- a/bio.html
+++ b/bio.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About | Udit Deo</title>
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <script>
     // Auto-detect dark mode preference
     window.onload = function () {
@@ -31,10 +32,17 @@
         <button onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
       </div>
       <div class="contact">
-        <p><strong>Email:</strong><br><a href="mailto:uditdeo1670@gmail.com">uditdeo1670@gmail.com</a></p>
-        <p><strong>GitHub:</strong><br><a href="https://github.com/deoudit">deoudit</a></p>
-        <p><strong>LinkedIn:</strong><br><a href="https://linkedin.com/in/deoudit98">deoudit98</a></p>
-      </div>
+  <a href="mailto:uditdeo1670@gmail.com" class="contact-link" title="Email">
+    <i class="fas fa-envelope"></i> uditdeo1670@gmail.com
+  </a>
+  <a href="https://github.com/deoudit" class="contact-link" title="GitHub" target="_blank">
+    <i class="fab fa-github"></i> deoudit
+  </a>
+  <a href="https://linkedin.com/in/deoudit98" class="contact-link" title="LinkedIn" target="_blank">
+    <i class="fab fa-linkedin"></i> deoudit98
+  </a>
+</div>
+
     </aside>
 
     <!-- Main Content -->
