--- a/bio.html
+++ b/bio.html
@@ -32,17 +32,16 @@
         <button onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
       </div>
       <div class="contact">
-  <a href="mailto:uditdeo1670@gmail.com" class="contact-link" title="Email">
+  <a href="mailto:uditdeo1670@gmail.com" class="contact-link">
     <i class="fas fa-envelope"></i> uditdeo1670@gmail.com
   </a>
-  <a href="https://github.com/deoudit" class="contact-link" title="GitHub" target="_blank">
+  <a href="https://github.com/deoudit" class="contact-link" target="_blank">
     <i class="fab fa-github"></i> deoudit
   </a>
-  <a href="https://linkedin.com/in/deoudit98" class="contact-link" title="LinkedIn" target="_blank">
+  <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
     <i class="fab fa-linkedin"></i> deoudit98
   </a>
 </div>
-
     </aside>
 
     <!-- Main Content -->
