--- a/bio.html
+++ b/bio.html
@@ -33,13 +33,13 @@
       </div>
       <div class="contact">
   <a href="mailto:uditdeo1670@gmail.com" class="contact-link">
-    <i class="fas fa-envelope"></i> uditdeo1670@gmail.com
+    <i class="fas fa-envelope"></i> Email
   </a>
   <a href="https://github.com/deoudit" class="contact-link" target="_blank">
-    <i class="fab fa-github"></i> deoudit
+    <i class="fab fa-github"></i> GitHub
   </a>
   <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
-    <i class="fab fa-linkedin"></i> deoudit98
+    <i class="fab fa-linkedin"></i> Linkedin
   </a>
 </div>
     </aside>
