--- a/bio.html
+++ b/bio.html
@@ -32,16 +32,16 @@
         <button onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
       </div>
       <div class="contact">
-  <a href="mailto:uditdeo1670@gmail.com" class="contact-link">
-    <i class="fas fa-envelope"></i> Email Me
-  </a>
-  <a href="https://github.com/deoudit" class="contact-link" target="_blank">
-    <i class="fab fa-github"></i> GitHub
-  </a>
-  <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
-    <i class="fab fa-linkedin"></i> Connect
-  </a>
-</div>
+        <a href="mailto:uditdeo1670@gmail.com" class="contact-link" title="uditdeo1670@gmail.com">
+          <i class="fas fa-envelope"></i> Udit’s Mail
+        </a>
+        <a href="https://github.com/deoudit" class="contact-link" target="_blank">
+          <i class="fab fa-github"></i> GitHub
+        </a>
+        <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
+          <i class="fab fa-linkedin"></i> Connect
+        </a>
+      </div>
     </aside>
 
     <!-- Main Content -->
@@ -54,6 +54,23 @@
         <li><strong>M.Tech in Software Engineering</strong>, MANIT Bhopal (2023–2025) — CGPA: 9.37</li>
         <li><strong>B.Tech in Computer Science</strong>, SMVDU (2017–2021) — CGPA: 8.21</li>
       </ul>
+
+      <h3>Industry Experience</h3>
+<ul>
+  <li>
+    <strong>Associate Software Engineer</strong> — Amdocs, Gurugram <em>(Jul 2021 – Jun 2023)</em><br />
+    • Developed tools in C/C++ and Python for billing modules (BFENV, ODI, Splitter, Archive) in Unix environments.<br />
+    • Built a Python-based backward compatibility checker — reduced manual QA effort by 90%.<br />
+    • Created a database comparator and merger utility; designed a Flask-based regression testing system.<br />
+    • Recognized for innovation, code quality, and contributions to process optimization and internal tech events.
+  </li>
+  <li>
+    <strong>Machine Learning Intern</strong> — Stackfusion, Gurugram <em>(May 2020 – Jul 2020)</em><br />
+    • Fine-tuned deep learning models (YOLOv3, ResNet, MobileNetSSD) using transfer learning for vehicle axle/license plate detection.<br />
+    • Automated data preprocessing in Python — significantly improved dataset diversity and label accuracy.
+  </li>
+</ul>
+
 
       <h3>Research Interests</h3>
       <ul>
@@ -71,7 +88,7 @@
 
       <h3>Current Thesis</h3>
       <p>
-        <strong>Title:</strong> Bridging Fuzziness and Optimization: Frameworks for Relation Inequalities and Multi-Criteria Decision Systems<br>
+        <strong>Title:</strong> Bridging Fuzziness and Optimization: Frameworks for Relation Inequalities and Multi-Criteria Decision Systems<br />
         <strong>Advisors:</strong> Prof. MMS Beg (ZHCET, AMU) and Dr. JK Jain (MANIT Bhopal)
       </p>
     </main>
