--- a/bio.html
+++ b/bio.html
@@ -86,7 +86,7 @@
         <li>GATE (CS, 2022 & 2025) | GATE (DA, 2025)</li>
       </ul>
 
-      <h3>Current Thesis</h3>
+      <h3>MTech Thesis</h3>
       <p>
         <strong>Title:</strong> Bridging Fuzziness and Optimization: Frameworks for Relation Inequalities and Multi-Criteria Decision Systems<br />
         <strong>Advisors:</strong> Prof. MMS Beg (ZHCET, AMU) and Dr. JK Jain (MANIT Bhopal)
