--- a/bio.html
+++ b/bio.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <script>
-    // Auto-detect dark mode preference
     window.onload = function () {
       if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
         document.body.classList.add('dark-mode');
@@ -46,51 +45,69 @@
 
     <!-- Main Content -->
     <main class="main">
-      <h2>About Me</h2>
-      <p>I am a postgraduate researcher at MANIT Bhopal (INI) working at the intersection of fuzzy optimization, AI, and decision systems. My research focuses on building interpretable, intelligent systems that work in real-world environments.</p>
+      <!-- Hero Section -->
+      <section class="hero">
+        <h2>About Me</h2>
+        <p>I am a postgraduate researcher at MANIT Bhopal (INI) with experience in fuzzy optimization, AI, and multi-criteria decision systems. My work emphasizes real-world systems that are explainable, intelligent, and reliable.</p>
+      </section>
 
-      <h3>Education</h3>
-      <ul>
-        <li><strong>M.Tech in Software Engineering</strong>, MANIT Bhopal (2023–2025) — CGPA: 9.37</li>
-        <li><strong>B.Tech in Computer Science</strong>, SMVDU (2017–2021) — CGPA: 8.21</li>
-      </ul>
+      <!-- Education -->
+      <section>
+        <h3><i class="fas fa-graduation-cap"></i> Education</h3>
+        <ul>
+          <li><strong>M.Tech in Software Engineering</strong>, MANIT Bhopal (2023–2025) — CGPA: 9.37</li>
+          <li><strong>B.Tech in Computer Science</strong>, SMVDU (2017–2021) — CGPA: 8.21</li>
+        </ul>
+      </section>
 
-      <h3>Industry Experience</h3>
-<ul>
-  <li>
-    <strong>Associate Software Engineer</strong> — Amdocs, Gurugram <em>(Jul 2021 – Jun 2023)</em><br />
-    • Developed tools in C/C++ and Python for billing modules (BFENV, ODI, Splitter, Archive) in Unix environments.<br />
-    • Built a Python-based backward compatibility checker — reduced manual QA effort by 90%.<br />
-    • Created a database comparator and merger utility; designed a Flask-based regression testing system.<br />
-    • Recognized for innovation, code quality, and contributions to process optimization and internal tech events.
-  </li>
-  <li>
-    <strong>Machine Learning Intern</strong> — Stackfusion, Gurugram <em>(May 2020 – Jul 2020)</em><br />
-    • Fine-tuned deep learning models (YOLOv3, ResNet, MobileNetSSD) using transfer learning for vehicle axle/license plate detection.<br />
-    • Automated data preprocessing in Python — significantly improved dataset diversity and label accuracy.
-  </li>
-</ul>
+      <!-- Industry -->
+      <section>
+        <h3><i class="fas fa-briefcase"></i> Industry Experience</h3>
+        <ul>
+          <li>
+            <strong>Associate Software Engineer</strong> — Amdocs, Gurugram <em>(Jul 2021 – Jun 2023)</em><br />
+            • Developed tools in C/C++ and Python for billing modules (BFENV, ODI, Splitter, Archive) in Unix environments.<br />
+            • Built a Python-based backward compatibility checker — reduced manual QA effort by 90%.<br />
+            • Created a database comparator and merger utility; designed a Flask-based regression testing system.<br />
+            • Recognized for innovation, code quality, and process optimization.
+          </li>
+          <li>
+            <strong>Machine Learning Intern</strong> — Stackfusion, Gurugram <em>(May 2020 – Jul 2020)</em><br />
+            • Fine-tuned deep learning models (YOLOv3, ResNet, MobileNetSSD) for vehicle axle/license plate detection.<br />
+            • Automated data preprocessing with Python — improved label quality and dataset diversity.
+          </li>
+        </ul>
+      </section>
 
+      <!-- Research Interests -->
+      <section>
+        <h3><i class="fas fa-flask"></i> Research Interests</h3>
+        <ul>
+          <li>Fuzzy Optimization & Relation Inequalities</li>
+          <li>Multi-Criteria Decision Systems</li>
+          <li>Computer Vision & Deep Learning</li>
+          <li>Interpretable AI & Soft Computing</li>
+        </ul>
+      </section>
 
-      <h3>Research Interests</h3>
-      <ul>
-        <li>Fuzzy Optimization & Relation Inequalities</li>
-        <li>Multi-Criteria Decision Systems</li>
-        <li>Computer Vision & Deep Learning</li>
-        <li>Interpretable AI & Soft Computing</li>
-      </ul>
+      <!-- Exams -->
+      <section>
+        <h3><i class="fas fa-certificate"></i> Exams Qualified</h3>
+        <ul>
+          <li>UGC-NET (CS) – JRF (99.95%ile, Dec 2024) and Assistant Professor (June 2024)</li>
+          <li>GATE (CS, 2022 & 2025) | GATE (DA, 2025)</li>
+        </ul>
+      </section>
 
-      <h3>Exams Qualified</h3>
-      <ul>
-        <li>UGC-NET (CS) – JRF (99.95%ile, Dec 2024) and Assistant Professor (June 2024)</li>
-        <li>GATE (CS, 2022 & 2025) | GATE (DA, 2025)</li>
-      </ul>
-
-      <h3>MTech Thesis</h3>
-      <p>
-        <strong>Title:</strong> Bridging Fuzziness and Optimization: Frameworks for Relation Inequalities and Multi-Criteria Decision Systems<br />
-        <strong>Advisors:</strong> Prof. MMS Beg (ZHCET, AMU) and Dr. JK Jain (MANIT Bhopal)
-      </p>
+      <!-- Thesis -->
+      <section>
+        <h3><i class="fas fa-book"></i> MTech Thesis</h3>
+        <p>
+          <strong>Title:</strong> Bridging Fuzziness and Optimization: Frameworks for Relation Inequalities and Multi-Criteria Decision Systems<br />
+          <strong>Status:</strong> Successfully defended on 30 June 2025<br />
+          <strong>Advisors:</strong> Prof. MMS Beg (ZHCET, AMU) and Dr. JK Jain (MANIT Bhopal)
+        </p>
+      </section>
     </main>
   </div>
 </body>
