--- a/publications.html
+++ b/publications.html
@@ -40,6 +40,9 @@
         <a href="https://linkedin.com/in/deoudit98" class="contact-link" target="_blank">
           <i class="fab fa-linkedin"></i> Connect
         </a>
+        <a href="https://scholar.google.com/citations?user=uTstNTMAAAAJ&hl=en" class="contact-link" target="_blank">
+    <i class="fab fa-google"></i> Google Scholar
+  </a>
       </div>
     </aside>
 
