--- a/bio.html
+++ b/bio.html
@@ -51,13 +51,22 @@
       <!-- Hero Section -->
       <section class="hero">
         <h2>About Me</h2>
-        <p>I am a postgraduate researcher at MANIT Bhopal (INI) with experience in fuzzy optimization, AI, and multi-criteria decision systems. My work emphasizes real-world systems that are explainable, intelligent, and reliable.</p>
+        <p>I am Udit Deo, a Computer Science researcher and technologist with a strong foundation in deep learning, computer vision, and fuzzy optimization. 
+          Currently pursuing a Ph.D. in Computer Science and Engineering at the Indian Institute of Technology Roorkee, I hold an M.Tech in Software Engineering 
+          from MANIT Bhopal (GPA: 9.37) and a B.Tech from Shri Mata Vaishno Devi University. My research explores the intersection of machine learning, 
+          soft computing, and decision systems, with recent contributions published in IEEE and Springer-indexed international conferences. 
+          I am a UGC-NET JRF awardee and a dual GATE qualifier (CS & DA), demonstrating a sustained commitment to academic excellence. Professionally, 
+          I bring two years of industry experience at Amdocs, where I developed automation tools and optimized software systems across billing platforms. 
+          I have also held research roles at ZHCET, AMU and Stackfusion, fine-tuning deep learning models for real-world applications. I am the co-inventor of 
+          a granted design patent for a novel energy device, and I remain driven by interdisciplinary innovation, rigorous inquiry, and impactful technology 
+          development.</p>
       </section>
 
       <!-- Education -->
       <section>
         <h3><i class="fas fa-graduation-cap"></i> Education</h3>
         <ul>
+          <li><strong>PhD in Compurter Science and Engineering</strong>, IIT Roorkee (2025–Present)</li>
           <li><strong>M.Tech in Software Engineering</strong>, MANIT Bhopal (2023–2025) — CGPA: 9.37</li>
           <li><strong>B.Tech in Computer Science</strong>, SMVDU (2017–2021) — CGPA: 8.21</li>
         </ul>
