--- a/bio.html
+++ b/bio.html
@@ -73,7 +73,7 @@
       </section>
 
       <!-- Industry -->
-      <section>
+      <section id="industry">
         <h3><i class="fas fa-briefcase"></i> Industry Experience</h3>
         <ul>
           <li>
@@ -103,7 +103,7 @@
       </section>
 
       <!-- Exams -->
-      <section>
+      <section id="exams">
         <h3><i class="fas fa-certificate"></i> Exams Qualified</h3>
         <ul>
           <li>UGC-NET (CS) – JRF (99.95%ile, Dec 2024) and Assistant Professor (June 2024)</li>
@@ -124,4 +124,5 @@
   </div>
 </body>
 </html>
+
 
