--- a/bio.html
+++ b/bio.html
@@ -103,7 +103,7 @@
       </section>
 
       <!-- Exams -->
-      <section id="exams">
+      <section>
         <h3><i class="fas fa-certificate"></i> Exams Qualified</h3>
         <ul>
           <li>UGC-NET (CS) – JRF (99.95%ile, Dec 2024) and Assistant Professor (June 2024)</li>
@@ -124,5 +124,6 @@
   </div>
 </body>
 </html>
+
 
 
