--- a/bio.html
+++ b/bio.html
@@ -68,7 +68,7 @@
         <ul>
           <li><strong>PhD in Compurter Science and Engineering</strong>, IIT Roorkee (2025–Present)</li>
           <li><strong>M.Tech in Software Engineering</strong>, MANIT Bhopal (2023–2025) — CGPA: 9.53</li>
-          <li><strong>B.Tech in Computer Science</strong>, SMVDU (2017–2021) — CGPA: 8.21</li>
+          <li><strong>B.Tech in Computer Science and Engineering</strong>, SMVDU (2017–2021) — CGPA: 8.21</li>
         </ul>
       </section>
 
@@ -124,6 +124,7 @@
   </div>
 </body>
 </html>
+
 
 
 
