--- a/bio.html
+++ b/bio.html
@@ -53,7 +53,7 @@
         <h2>About Me</h2>
         <p>I am Udit Deo, a Computer Science researcher and technologist with a strong foundation in deep learning, computer vision, and fuzzy optimization. 
           Currently pursuing a Ph.D. in Computer Science and Engineering at the Indian Institute of Technology Roorkee, I hold an M.Tech in Software Engineering 
-          from MANIT Bhopal (GPA: 9.53) and a B.Tech from Shri Mata Vaishno Devi University. My research explores the intersection of machine learning, 
+          from MANIT Bhopal (GPA: 9.53) and a B.Tech in Computer Science and Engineering. My research explores the intersection of machine learning, 
           soft computing, and decision systems, with recent contributions published in IEEE and Springer-indexed international conferences. 
           I am a UGC-NET JRF awardee and a dual GATE qualifier (CS & DA), demonstrating a sustained commitment to academic excellence. Professionally, 
           I bring two years of industry experience at Amdocs, where I developed automation tools and optimized software systems across billing platforms. 
@@ -124,6 +124,7 @@
   </div>
 </body>
 </html>
+
 
 
 
