--- a/bio.html
+++ b/bio.html
@@ -106,7 +106,7 @@
       <section>
         <h3><i class="fas fa-certificate"></i> Exams Qualified</h3>
         <ul>
-          <li>UGC-NET (CS) – JRF (99.95%ile, Dec 2024) and Assistant Professor (June 2024)</li>
+          <li>UGC-NET (CS) – JRF (Dec 2024) and Assistant Professor (June 2024)</li>
           <li>GATE (CS, 2022 & 2025) | GATE (DA, 2025)</li>
         </ul>
       </section>
@@ -124,6 +124,7 @@
   </div>
 </body>
 </html>
+
 
 
 
